# sem19_var6

./: CMakeLists.txt  README.md  lp_solver
include/: LinearProgram.h  Solver.h
reports/: report.html
src/: LinearProgram.cpp  Solver.cpp  main.cpp
